<?xml version="1.0"?>
<package format="3">
  <name>parking_bot</name>
  <version>0.0.0</version>
  <description>Parallel parking robot vision and detection</description>

  <maintainer email="trewhoffman@gmail.com">Your Name</maintainer>
  <license>TODO</license>

  <depend>parking_bot_interfaces</depend>

  <!-- We are using CMake, not ament_python -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- For Python nodes -->
  <build_depend>ament_cmake_python</build_depend>

  <!-- For msg/srv generation -->
  <build_depend>rosidl_default_generators</build_depend>

  <!-- Runtime deps -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
